<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Strings -->
    <string name="app_name">ספארי רמת גן</string>
    <string name="action_settings">Settings</string>
    <string name="splash_loading">אנא המתן...</string>

    <!-- Buttons Strings -->
    <string name="btn_map">מפה</string>
    <string name="btn_useful">שימושי</string>
    <string name="btn_animals">בעלי חיים</string>
    <string name="btn_info">מידע</string>
    <string name="btn_study_room">חדר לימוד</string>
    <string name="btn_first_aid">עזרה ראשונה</string>
    <string name="btn_toilet">שירותים</string>
    <string name="btn_gift_shop">חנות מתנות</string>
    <string name="btn_information">מודיעין</string>
    <string name="btn_diner">קיוסק</string>
    <string name="btn_petting_zoo">משק חי לילדים</string>
    <string name="btn_restaurant">מסעדה</string>
    <string name="btn_picnic">איזור פיקניק</string>
    <string name="btn_parking">חניה</string>
    <string name="btn_train">מקום יציאת הרכבת</string>
    <string name="btn_scooter">השכרת קלנועיות</string>

    <!-- List Items Strings -->
    <string name="all">All</string>
    <string name="gorilla_desc">הגורילה הוא הקוף הגדול בעולם. הזכרים גדולים עד פי שניים מהנקבות. הפרווה חומה ערמונית הקודקוד והמצח לעיתים בהירים יותר. לזכרים הבוגרים פרווה כסופה על גבם. כפות הידיים, הפנים, עפות הרגליים והחזה שחורים וחסרי פרווה.
ידיהן ארוכות אף יותר מרגליהן ומשמשות אותן בהליכה. בעת ההליכה נשענת הגורילה על פרקי אצבעות כף היד.\n\nמכל קופי האדם לגורילה המבנה החברתי ה כי יציב קבוצות של גורילת השפלה המערבית מונות בין 5 ל- 10 פרטים אך יכולות להגיע גם ל- 30 פרטים. הקבוצה מונה זכר שליט "כסוף גב" ומספר נקבות וצאצאיהן. עם ההגעה לבגרות מינית זכרים ונקבות צעירים עוזבים את הקבוצה. 
בניגוד לתדמית המפלצתית שנבעה בעיקר מהסרט קינג קונג, הגורילות הן בעלי חיים שלווים מאוד. הזכר השליט יתקוף רק אם יחוש באיום ממשי עליו או על משפחתו. עימותים בין זכרים נפתרים על פי רוב במצגי איום בלבד, כמו למשל בהכאה באגרופים על החזה.</string>

</resources>