<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_logo"
    tools:context=".MapActivity" >

    <com.odapps.safarirg.classes.TouchImageView
        android:id="@+id/tivMap"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:scaleType="center" />

    <Button
        android:id="@+id/bLocation"
        style="@style/ButtonSmall"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:layout_marginTop="15dp"
        android:drawableTop="@drawable/ic_map_w"
        android:fitsSystemWindows="false" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <HorizontalScrollView
            android:id="@+id/hsvMapButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bStudyRoom"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_useful_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_study_room"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/bFirstAid"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_useful_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_first_aid"
                     android:textSize="10.5sp" />

                <Button
                    android:id="@+id/bToilet"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_map_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_toilet" />

                <Button
                    android:id="@+id/bGiftShop"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_animals_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_gift_shop"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/bInformation"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_info_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_information" />

                <Button
                    android:id="@+id/bDiner"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_useful_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_diner" />

                <Button
                    android:id="@+id/bPettingZoo"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_useful_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_petting_zoo"
                    android:textSize="9.5sp" />

                <Button
                    android:id="@+id/bRestaurant"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_map_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_restaurant" />

                <Button
                    android:id="@+id/bPicnic"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_animals_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_picnic"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/bParking"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_info_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_parking" />

                <Button
                    android:id="@+id/bTrain"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_info_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_train"
                    android:textSize="8.5sp" />

                <Button
                    android:id="@+id/bScooter"
                    style="@style/ButtonMenu"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_info_w"
                    android:fitsSystemWindows="false"
                    android:text="@string/btn_scooter"
                    android:textSize="8.5sp" />
            </LinearLayout>
        </HorizontalScrollView>
    </RelativeLayout>

</RelativeLayout>